# DND-Game

COMP345A1/: CMakeLists.txt  README.md  archer.txt  archergob.txt  archerlvl.txt  campaign.txt  doxyfile  dragon.txt  goblin.txt  input.txt  level1.txt  level2.txt  line.txt  pre-generated.txt  test.txt  testCampaignName.txt  testc.txt  testc2.txt
COMP345A1/CppUnit/src/DllPlugInTester/DebugDll/: DllPlugInTester.vcxproj.FileListAbsolute.txt  DllPlugInTesterd_dll.exe.recipe
COMP345A1/CppUnit/src/DllPlugInTester/ReleaseDll/: DllPlugInTester.vcxproj.FileListAbsolute.txt  DllPlugInTester_dll.exe.recipe
COMP345A1/docs/html/: _armor_8h_source.html  _belt_8h_source.html  _boots_8h_source.html  _cell_8h_source.html  _character_8h.html  _character_8h_source.html  _fighter_8h.html  _fighter_8h_source.html  _helmet_8h_source.html  _item_8h_source.html  _item_container_8h_source.html  _map_8h_source.html  _ring_8h_source.html  _shield_8h_source.html  _test_fighter_8cpp.html  _test_fighter_8h.html  _test_fighter_8h_source.html  _test_runner_8cpp.html  _weapon_8h_source.html  annotated.html  class_armor-members.html  class_armor.html  class_belt-members.html  class_belt.html  class_boots-members.html  class_boots.html  class_cell-members.html  class_cell.html  class_character-members.html  class_character.html  class_fighter-members.html  class_fighter.html  class_helmet-members.html  class_helmet.html  class_item-members.html  class_item.html  class_item_container-members.html  class_item_container.html  class_map-members.html  class_map.html  (+26 more)
COMP345A1/docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_4.js  classes_b.js  enums_0.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  functions_f.js  searchdata.js
COMP345A1/docs/latex/: _armor_8h_source.tex  _belt_8h_source.tex  _boots_8h_source.tex  _cell_8h_source.tex  _character_8h.tex  _character_8h_source.tex  _fighter_8h.tex  _fighter_8h_source.tex  _helmet_8h_source.tex  _item_8h_source.tex  _item_container_8h_source.tex  _map_8h_source.tex  _ring_8h_source.tex  _shield_8h_source.tex  _test_fighter_8cpp.tex  _test_fighter_8h.tex  _test_fighter_8h_source.tex  _test_runner_8cpp.tex  _weapon_8h_source.tex  annotated.tex  class_armor.tex  class_belt.tex  class_boots.tex  class_cell.tex  class_character.eps  class_character.tex  class_fighter.eps  class_fighter.tex  class_helmet.tex  class_item.tex  class_item_container.tex  class_map.tex  class_ring.tex  class_shield.tex  class_test_fighter.eps  class_test_fighter.tex  class_weapon.tex  files.tex  hierarchy.tex  refman.tex  (+2 more)
COMP345A1/src/: TestRunner.cpp  main.cpp  map_example.txt
COMP345A1/src/classes/Armor/: Armor.cpp  Armor.h
COMP345A1/src/classes/Belt/: Belt.cpp  Belt.h
COMP345A1/src/classes/Boots/: Boots.cpp  Boots.h
COMP345A1/src/classes/Builder/: BullyBuilder.cpp  BullyBuilder.h  FighterBuilder.h  NimbleBuilder.cpp  NimbleBuilder.h  TankBuilder.cpp  TankBuilder.h
COMP345A1/src/classes/Campaign/: Campaign.cpp  Campaign.h
COMP345A1/src/classes/Cell/: Cell.cpp  Cell.h
COMP345A1/src/classes/CellContent/: CellContent.cpp  CellContent.h
COMP345A1/src/classes/Character/: Character.cpp  Character.h
COMP345A1/src/classes/CharacterEditor/: CharacterEditor.cpp  CharacterEditor.h
COMP345A1/src/classes/CharacterStrategy/: CharacterStrategy.cpp  CharacterStrategy.h
COMP345A1/src/classes/Dice/: Dice.cpp  Dice.h
COMP345A1/src/classes/Fighter/: Fighter.cpp  Fighter.h
COMP345A1/src/classes/Game/: Game.cpp  Game.h
COMP345A1/src/classes/GameLogger/: GameLogger.h
COMP345A1/src/classes/Helmet/: Helmet.cpp  Helmet.h
COMP345A1/src/classes/Item/: Item.cpp  Item.h
COMP345A1/src/classes/ItemContainer/: ItemContainer.cpp  ItemContainer.h
COMP345A1/src/classes/ItemContainerEditor/: ItemContainerEditor.cpp  ItemContainerEditor.h
COMP345A1/src/classes/Map/: Map.cpp  Map.h
COMP345A1/src/classes/MapBuilders/: GameLevelMapBuilder.cpp  GameLevelMapBuilder.h  MapBuilder.h  MapEditorBuilder.cpp  MapEditorBuilder.h
COMP345A1/src/classes/MapEditor/: MapEditor.cpp  MapEditor.h
COMP345A1/src/classes/ObserverPattern/: CharacterObserver.cpp  CharacterObserver.h  MapObserver.cpp  MapObserver.h  Observer.cpp  Observer.h  Subject.cpp  Subject.h
COMP345A1/src/classes/Ring/: Ring.cpp  Ring.h
COMP345A1/src/classes/Shield/: Shield.cpp  Shield.h
COMP345A1/src/classes/Weapon/: Weapon.cpp  Weapon.h
COMP345A1/src/tests/TestDice/: TestDice.cpp  TestDice.h
COMP345A1/src/tests/TestFighter/: TestFighter.cpp  TestFighter.h
COMP345A1/src/tests/TestItems/: TestItems.cpp  TestItems.h
COMP345A1/src/tests/TestMap/: TestMap.cpp  TestMap.h
COMP345A1/src/tests/TestMapEditor/: TestMapEditor.cpp  TestMapEditor.h
(+55 files in other folders)
